apps/base/kagent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kagent
  labels:
    name: kagent
